fixed index layout issues

--- a/Public/styles/main.css
+++ b/Public/styles/main.css
@@ -27,42 +27,56 @@ a a:hover, a:visited, a:link, a:active {
     text-decoration: none;
 }
 
-input {
-  border-color: var(--yellow);
-  color: green;
-}
-
 
 /* Layout */
+
 .container {
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding: 16px;
 }
 
-/* Common */
+.section-header {
+  padding: 64px 0;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .row {
+    margin: 0;
+  }
+
+  .container {
+    padding: 16px 16px 32px 16px
+  }
+
+  .section-header {
+    padding: 64px 0;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+  }
+}
 
 .dark-bg {
   background-color: var(--bg-color)
 }
 
-/* .section-header {
-  padding: 0px 0;
+
+
+/* .section {
+  padding: 64px 0;
 } */
 
-.section {
+/* .section-header {
   padding: 64px 0;
-}
+} */
 
-.section-header {
-  padding-bottom: 64px;
-
-}
-
-.section-header div {
+/* .section-header div {
   font-size: 60px;
   font-weight: bolder;
   text-align: center;
-}
+} */
 
 .underline {
   height: 7px;
@@ -207,10 +221,6 @@ nav a:hover {
 } */
 
 @media only screen and (max-width: 768px) {
-  #about-me-section {
-    padding: 32px;
-  }
-
   #about-me-dot-image {
     display: none;
   }
@@ -245,7 +255,7 @@ nav a:hover {
 #tags-section {
   font-size: 24px;
   text-align: center;
-  padding: 60px 0;
+  padding: 0 0 64px 0;
 }
 
 #tags-section a {
@@ -266,7 +276,17 @@ nav a:hover {
   }
 }
 
-/* Footer */
+/* form */
+@media only screen and (max-width: 768px) {
+  .form-group .col-sm-4 {
+    padding: 0;
+  }
+}
+
+.form-group input {
+  margin-bottom: 16px;
+}
+
 #footer-section {
   padding: 32px;
   text-align: right;
